# secret-santa-service

./: Cargo.toml
src/: main.rs
